--- a/index.KTX.html
+++ b/index.KTX.html
@@ -4,32 +4,21 @@
     <head>
     <meta charset="UTF-8">
     </head>
-    <body style="background-color: rgba(231, 43, 43, 0.6);">
+    <body style="background-color:blue">
     <div>
-    <h1>내 가장 좋아하는 유튜트 영상들</h1>
+    <h1>내 가장 좋아하는 빵빵이의 영상들이에요</h1>
     <br>
-    <h1>동내눔들의 미친 뉴스 방송이에요</h1>
+    <h1>빵빵이의 공사 하는 소리 개옷낀거 같아요</h1>
     <br>
-    <h1></h1>
-    <iframe width="700" height="700" src="https://www.youtube.com/embed/tL5HiiF5nas?si=gVs7WNrjbDOeKwQ8&amp;start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1000" height="700" src="https://www.youtube.com/embed/8IEzLZDfsIU?si=LRsKd_d2I-QTcCOL&amp;start=128" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
-    <h1>KTX는 대한민국의 빠르게 가장 가는 열차일 뿐만 아니라 제 처음 탔던 고속열차거든요<h1>
+    <h1>그리고 빵빵이의 복권당첨은 사람들이 남자 1명을 열심히 패고 있었습니다</h1>
     <br>
-    <h1>KTX 어떻게 빠르기 가는기 이해할도록 이 영상 보십시오<h1>
-    <iframe width="700" height="700" src="https://www.youtube.com/embed/9oWS_WiNdBg?si=G2Bgbg1NOMavFe3t&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1000" height="700" src="https://www.youtube.com/embed/GFGGZhjYsVE?si=frUVYL8-QJVO7A9I&amp;start=218" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
-    <h1>하지만 그 영상에 있었던 KTX는 제 처음 탔던 KTX 아닌데요<h1>
-    <br>
-    <h1>저는 KTX 탔을 때 KTX-1 열차말고 KTX 이음을 통해 청양리역부터 강릉역까지 탔어요<h1>
-    <br>
-    <h1>그리고 청양리역으로 다녀왔을  때 KTX 이음 511호 탔더라고요<h1>
-    <br>
-    <iframe width="700" height="700" src="https://www.youtube.com/embed/KflNehsAoCU?si=BSGD24CAmCH-so05&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-    <h1>여러분 재 웝페지 봐서 감가합니다<h1>
-    <br>
-    <h1>더 만들어면 좋습니까?<h1>
-</html>
+    <h1>이 영상 안에 자동차가 그 눔을 쳤어요</h1>
+    <iframe width="1000" height="700" src="https://www.youtube.com/embed/FgSdMsejAKI?si=1Q_6EH7C_8j3fUWO&amp;start=155" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<html>
 
 
 
