산출 파일 만들며 index.KTX.html 파일 안에 단어들 바꿨습니다

--- a/index.KTX.html
+++ b/index.KTX.html
@@ -10,7 +10,7 @@
     <br>
     <div style="width:700px;max-width:100%;"><div style="height:0;padding-bottom:66.67%;position:relative;"><iframe width="300" height="200" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameBorder="0" src="https://imgflip.com/embed/sgl92"></iframe></div><p><a href="https://imgflip.com/gif/sgl92">via Imgflip</a></p></div>
     <br>
-    <h1>KTX는 대한민국의 빠르게 가장 가는 열차일 뿐만 아니라 제 처음 탔던 고속열차거든요<h1>
+    <h1>KTX는 대한민국의 가장 빠르게 가는 열차일 뿐만 아니라 제 처음 탔던 고속열차거든요<h1>
     <br>
     <h1>KTX 어떻게 빠르기 가는기 이해할도록 이 영상 보십시오<h1>
     <iframe width="700" height="700" src="https://www.youtube.com/embed/9oWS_WiNdBg?si=G2Bgbg1NOMavFe3t&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
