--- a/index.KTX.html
+++ b/index.KTX.html
@@ -19,6 +19,10 @@
     <h1>이 영상 안에 자동차가 그 눔을 쳤어요</h1>
     <iframe width="1000" height="700" src="https://www.youtube.com/embed/FgSdMsejAKI?si=1Q_6EH7C_8j3fUWO&amp;start=155" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
+    <h1>빵빵이의 기사님은 싸워는 대신 숨었어요</h1>
+    <br>
+    <iframe width="1000" height="700" src="https://www.youtube.com/embed/0HF4ngbxjFU?si=yNETs3Jll4Ph18dZ&amp;start=27" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
     <h1>제 웹사이트 봐서 감사합니다</h1>
     <br>
 <html>
