--- a/index.KTX.html
+++ b/index.KTX.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8">
     </head>
-    <body style="background-color:blue">
+    <body style="background-color:green">
     <div>
     <h1>내 가장 좋아하는 빵빵이의 영상들이에요</h1>
     <br>
