--- a/index.빵빵아.html
+++ b/index.빵빵아.html
@@ -26,14 +26,18 @@
     <br>
     <iframe width="1000" height="700" src="https://www.youtube.com/embed/IBG4hCwqq6U?si=7EvCtPV3MaVlbJXp&amp;start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
+    <h1>옥지가 회식에 술 마시면 이렇개 행동할 거에요</h1>
+    <iframe width="1000" height="700" src="https://www.youtube.com/embed/UsU7ReQ_JPs?si=_uI9e6WRai7SoEC3&amp;start=70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
     <h1>제 웹사이트 봐서 감사합니다</h1>
     <br>
-    <h1>빵빵이의 유튜브 컨텐츠 계속 보려면 빵빵이의 유튜트 링크 여기 있습니다</h1>
-    <a>
-        빵빵이의 유튜쁘 체널이에요
+    <h1>빵빵이의 일상 유튜브 컨텐츠 계속 보려면 빵빵이의 유튜트 링크 여기 있습니다:</h1>
+    <a href="https://www.youtube.com/@b2ang" target=_blank tittle="빵빵이의 일상 유튜쁘 체널이에요">
+        <h1>빵빵이의 일상 유튜쁘 체널이에요, 잘 보세요</h1>
     </a>
 
 <html>
+  
 
 
 
